objects/UNITY_Warranty__c.object
<CustomObject>
    <description>UNITY warranty object to capture customer, vendor, OEM and Miner warranty.</description>
    <fields>
        <fullName>UNITY_Active__c</fullName>
        <formula>If( TODAY() &lt;= UNITY_End_Date__c &amp;&amp; TODAY() &gt;=  UNITY_Start_Date__c , TRUE, FALSE)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Warranties</relationshipLabel>
        <relationshipName>Warrantys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UNITY_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Warrantys</relationshipLabel>
        <relationshipName>Warrantys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Warranty_Type__c</fullName>
        <label>Warranty Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Miner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Warranty</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Warranty  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>